<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:background="@drawable/pink"
    android:layout_height="fill_parent"
    >


    <TableRow
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:gravity="center"
        android:paddingTop="10px">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="181dp"
            android:layout_height="294dp"
            app:srcCompat="@drawable/muh_gupran" />
    </TableRow>

    <TableRow
        android:layout_marginTop="20dip" >

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/nama"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginLeft="20dip"
            ></TextView>

        <TextView
            android:id="@+id/screenName"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:text="Muh Gupran"
            android:textSize="20sp">

        </TextView>

    </TableRow>


    <TableRow
        android:layout_marginTop="20dip" >

        <TextView android:text="@string/nim"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"></TextView>

        <TextView
            android:id="@+id/NIM"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:text="190601034"
            android:textSize="20sp">

        </TextView>

    </TableRow>
    <TableRow
        android:layout_marginTop="20dip" >

        <TextView android:text="@string/prodi"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"></TextView>

        <TextView
            android:id="@+id/prodi"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:text="@string/sistem_informasi"
            android:textSize="20sp">

        </TextView>

    </TableRow>
    <TableRow
        android:layout_marginTop="20dip" >

        <TextView android:text="@string/hobi"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"></TextView>

        <TextView
            android:id="@+id/alamat"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:text="@string/isi_hobi"
            android:textSize="20sp">

        </TextView>

    </TableRow>

</TableLayout>